kubernetes/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '2112'
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: kubernetes.io/hostname
            labelSelector:
              matchLabels:
                app: server
      containers:
      - name: server
        image: ghcr.io/jfmrm/benchmark-server:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
            cpu: "1"
          limits:
            memory: "256Mi"
            cpu: "1"
        ports:
        - containerPort: 50051
        - containerPort: 2112
