kubernetes/server/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: server
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`server.11.0.212.161.nip.io`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: server-headless
          port: 50051
          kind: Service
          scheme: h2c
