kubernetes/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server
  labels:
    name: server
spec:
  rules:
  - host: benchmark.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: server
            port:
              number: 50051
